--- a/GoIT/markup/home/lesson1/styles/style.css
+++ b/GoIT/markup/home/lesson1/styles/style.css
@@ -1,18 +1,45 @@
+body {
+	background-color: rgb(238,238,238);
+}
+
+.page {
+	width: 550px;
+	background-color: white;
+	margin:auto; 
+	font-size: 16px;
+	border: 1px solid rgb(213,213,213);
+}
+
+.block0 {
+	text-align: center;
+	border-bottom: 2px solid rgb(213,213,213); 
+	margin: 15px;
+}
+
 .image{ 
-margin:auto; 
-display: block; 
-height: 150px;
+	margin:auto; 
+	display: block; 
+	height: 150px;
 } 
 
-hr {
-	width: 600px;
+.block1 {
+	border-bottom: 2px solid rgb(213,213,213); 
+	margin: 25px;
+	padding: 0 15px;
 }
 
-.center, h1{
-	text-align: center;
+.block2 {
+	margin: 25px;
+	padding: 0 15px;
 }
 
-p,li {
-	margin-left: 30%;
-	margin-right: 30%;
-}
+
+
+
+
+
+
+
+
+
+
