--- a/GoIT/markup/home/lesson1/styles/style.css
+++ b/GoIT/markup/home/lesson1/styles/style.css
@@ -14,6 +14,11 @@ body {
 	text-align: center;
 	border-bottom: 2px solid rgb(213,213,213); 
 	margin: 25px;
+	padding: 0 15px;
+}
+
+.left {
+	text-align: left;
 }
 
 .image{ 
