--- a/GoIT/markup/home/lesson3/css/style.css
+++ b/GoIT/markup/home/lesson3/css/style.css
@@ -10,66 +10,73 @@
 }
 
 body {
-	display: block;
-	margin: 0 auto;
-	width: 1060px;
 	background-color: rgb(249,249,249);
-	border-right: 2px solid rgb(225,225,225);
-	border-left: 2px solid rgb(225,225,225);
 	font-family: 'OpenSansRegular';
-	font-size: 14px;
-	height: 990px;
 }
 
 .page {
+	position: relative;
+	overflow: hidden;
+	display: block;
+	margin: 0 auto;
+	width: 1060px;
 	background-color: white;
-	
+	border-left: 1px solid rgb(219,219,219);
+	border-right: 1px solid rgb(219,219,219);
 }
 
-.in_page {
-	margin: 0 40px;
+.logo {
+	margin: 60px 0 45px 40px;
 }
 
-.fitness {
-	margin: 45px 0;
+.panel {
+	display: block;
+	margin: 0 auto;
 }
 
 .top_menu {
 	display: block;
-	margin: 0 auto;
-	background-color: rgb(83,82,82);
+	margin: 0 40px;
+	background-image: url(../img/panel.png);
 	height: 40px;
-	width: 980px;
 }
 
 .top_menu li {
-    display: inline-block;
-    padding: 11px 40px;
+	display: inline-block;
 }
 
-.top_menu a {
+.top_menu li a {
+	display: block;
+	line-height: 16px;
 	text-decoration: none;
-	color: white;
+	color: rgb(255,255,255);
+	font-size: 15px;
+	padding: 12px 38px;
 }
 
-.top_menu li:hover {
-	background-color: rgb(69,69,69);
-	border-left: 1px solid white;
-	border-right: 1px solid white;
+.top_menu li:hover a{
+	background-color: rgb(59,59,59);
+	border-left: 1px solid rgb(131,131,131);
+	border-right: 1px solid rgb(131,131,131);
+	padding: 12px 37px;
+}
+
+.container {
+	position: relative;
+	overflow: hidden;
 }
 
 .left {
 	float: left;
-	margin: 45px 0px;
-	width: 240px;
+	margin: 40px 0 0 40px;
 	border: 1px solid rgb(200,200,200);
+	width: 240px;
 }
 
 .left li{
 	display: block;
-	height: 40px;
-	width: 240px;
 	border-bottom: 1px solid rgb(200,200,200);
+	line-height: 15px;
 }
 
 li:last-child {
@@ -79,58 +86,66 @@ li:last-child {
 .left li a {
 	display: block;
 	text-decoration: none;
+	font-size: 13px;
 	color: rgb(200,200,200);
-	padding: 10px 0px 10px 25px;
+	padding: 14px 0px 14px 25px;
 }
 
-.left li:hover {
+.left li:hover a {
 	background-color: rgb(249,249,249);
+	padding-left: 35px;
 }
 
-.block_img {
+.right {
+	position: relative;
+	overflow: hidden;
 	float: right;
+	margin: 40px 40px 0 0;
+}
+
+.bicycle {
 	border: 1px solid rgb(200,200,200);
-	margin-top: 45px;
+	height: 400px; 
 	width: 680px;
-	height: 400px;
 }
 
 .img {
 	display: block;
 	margin: 0 auto;
-	padding: 30px;
+	padding: 40px 0;
 }
 
 .text {
+	clear: right;
 	display: block;
-	float: right;
 	width: 640px;
-	margin: 40px 23px 60px 0px;
-	color: rgb(100,100,100);
-	line-height: 1.5;
+	padding: 40px 0 60px 25px;
+	font-size: 13px;
+	line-height: 21px;
+	color: rgb(44,44,44);
 }
 
 .bottom_menu {
 	overflow: hidden;
 	display: block;
-	margin: 60px auto;
+	margin: 0 40px 65px 40px;
 	background-color: rgb(225,225,225);
-	height: 40px;
-	min-width: 970px;
+	line-height: 20px;
+	font-size: 13px;
+}
+
+.bottom_menu li {
+    display: inline-block;
+    padding: 13px 40px;
 }
 
 .bottom_menu a {
 	text-decoration: none;
 	color: rgb(0,0,0);
+	
 }
 
-.bottom_menu li {
-    display: inline-block;
-    padding: 11px 40px;
-}
-
-.bottom_menu li:hover {
-	background-color: rgb(225,225,225);
+.bottom_menu li a:hover {
 	text-decoration: underline;
 }
 
@@ -138,11 +153,5 @@ li:last-child {
 	display: block;
 	color: rgb(0,0,0);
 	float: right;
-	padding: 15px 25px;
+	padding: 13px 25px 13px 0;
 }
-
-
-
-
-
-
