--- a/GoIT/markup/home/lesson3(dop)/css/style.css
+++ b/GoIT/markup/home/lesson3(dop)/css/style.css
@@ -2,31 +2,22 @@ body {
 	background-image: url(../img/bg.jpg);
 	background-repeat: no-repeat;
 	background-size: 100%;
-
-}
-.page {
-	margin: 0 70px;
 }
 
 .header {
-	margin-top: 50px;
-	display: block;
-}
-
-.left {
-	float: left;
-
+	position: relative;
+	overflow: hidden;
+	margin: 50px 70px 0 70px;
 }
 
 .logo {
-	width: 340px;
-	margin-left: 10px;
+	float: left;
 }
 
 .right {
 	float: right;
-	margin-right: 75px;
-	margin-top: 200px;
+	margin-right: 70px;
+	margin-top: 150px;
 }
 
 .right p {
@@ -34,40 +25,30 @@ body {
 	font-size: 14px;
 }
 
-.container {
+.content{
+	display: block;
 	overflow: hidden;
+    margin: 0 70px;
 }
 
-.centerWrapper {
-    width: 100%;
-    max-width: 1800px;
-    margin: 0 auto;
-	overflow: hidden;
-}
-
-.pageContent {
-	overflow: hidden;
-	clear: both;
-
-}
-
-.smallBlocks {
-	position: relative;
-    overflow: hidden;
-}
-
-.smallBlocks  > div  {
+.left_col {
+	width: 33.33%;
 	float: left;
-	width: 33.333333%;
-	background-size: 100%;
+
 }
 
-.smallBlocks  > div > p {
-	color: white;
-	text-align: center;
-	font-size: 20px;
-	margin: 5px 0 60px 0;
-	
+.center_col {
+	width: 33.33%;
+}
+
+.right_col {
+	width: 33.33%;
+	float: right;
+}
+
+.block {
+	display: block;
+	margin: 0 auto;
 }
 
 .img {
@@ -78,9 +59,16 @@ body {
 	width: 380px;
 }
 
+.block p {
+	color: white;
+	text-align: center;
+	font-size: 20px;
+	margin: 5px 0 50px 0;
+}
+
 .footer {
 	display: block;
-	margin: 185px 0 20px;
+	margin: 180px 0 30px 0;
 	text-align: center;
 	color: white;
 }
