--- a/GoIT/markup/home/lesson3(dop)/css/style.css
+++ b/GoIT/markup/home/lesson3(dop)/css/style.css
@@ -2,34 +2,47 @@ body {
 	background-image: url(../img/bg.jpg);
 	background-repeat: no-repeat;
 	background-size: 100%;
-	font-family: Tahoma, sans-serif;
 }
 
 .header {
-	position: relative;
-	overflow: hidden;
-	margin: 50px 70px 0 70px;
+	margin: 0 70px 0 70px;
+	height: 310px;
 }
 
 .logo {
+	display: block;
 	float: left;
+	background-image: url(../img/logo.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	width: 400px;
+	height: 310px;
+}
+
+.clearfix:after {
+	content: '';
+	clear: both;
+	display: block;
+}
+
+.bold {
+	font-weight: bold;
 }
 
 .right {
 	float: right;
-	margin-right: 70px;
-	margin-top: 150px;
+	margin-top: 260px;
+	margin-right: 20px;
 }
 
 .right p {
-	color: white;
-	font-size: 14px;
+	color: rgb(230,230,230);
+	font-size: 10px;
+	font-family: 'Tahoma Regular', sans-serif;
 }
 
 .content{
-	display: block;
-	overflow: hidden;
-    margin: 0 70px;
+	margin: 0 70px;
 }
 
 .left_col {
@@ -38,40 +51,44 @@ body {
 
 }
 
-.center_col {
-	width: 33.33%;
-}
-
 .right_col {
 	width: 33.33%;
 	float: right;
 }
 
+.center_col {
+	width: 33.33%;
+}
+
 .block {
 	display: block;
-	margin: 0 auto;
+	margin: -5px auto;
 }
 
 .img {
 	display: block;
 	margin: 0 auto;
-	border: 3px solid rgb(149,149,149);
 	height: 240px;
-	width: 380px;
+	width: 400px;
 }
 
-.block p {
-	color: white;
+.block a {
+	display: block;
+	color: rgb(230,230,230);
 	text-align: center;
-	font-size: 20px;
+	font-size: 16px;
 	margin: 5px 0 50px 0;
+	font-family: 'Tahoma Regular', sans-serif;
+	text-decoration: none;
 }
 
 .footer {
 	display: block;
 	margin: 180px 0 30px 0;
 	text-align: center;
-	color: white;
+	color: rgb(230,230,230);
+	font-size: 10px;
+	font-family: 'Tahoma Regular', sans-serif;
 }
 
 
