--- a/GoIT/markup/home/lesson4/css/style.css
+++ b/GoIT/markup/home/lesson4/css/style.css
@@ -10,8 +10,13 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100%;
 	margin: 40px 165px 0 165px;
-	box-shadow:  5px 0px 20px -2px #242424,  -5px 0px 20px -2px #242424;;
+	box-shadow:  5px 0px 20px -2px #242424,  -5px 0px 20px -2px #242424;
 	border-bottom: 3px solid black;
+	width: 1000px;
+}
+
+header {
+	height: 184px;
 }
 
 .contacts {
@@ -59,7 +64,6 @@ body {
 
 .photo {
 	height: 237px;
-	width: 100%;
 }
 
 .clearfix:after {
@@ -70,21 +74,20 @@ body {
 
 .wrapper {
 	position: relative;
+	margin-top: 1px;
 }
 
 .menu_panel {
 	background: linear-gradient(to bottom, #303030 0%,#373737 100%);
 	box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
 	border-bottom: 1px solid black;
-	margin: -2px 0;
-
 }
 
 .menu_panel li {
 	float: left;
 	list-style: none;
 	position: relative;
-}	
+}
 
 .menu_panel > li > a {
 	display: block;
