--- a/GoIT/markup/home/lesson4/css/style.css
+++ b/GoIT/markup/home/lesson4/css/style.css
@@ -9,7 +9,7 @@ body {
 	background-image: url(../img/page.png);
 	background-repeat: no-repeat;
 	background-size: 100%;
-	margin: 40px 165px 0 165px;
+	margin: 40px auto 0 auto;
 	box-shadow:  5px 0px 20px -2px #242424,  -5px 0px 20px -2px #242424;
 	border-bottom: 3px solid black;
 	width: 1000px;
@@ -19,10 +19,12 @@ header {
 	height: 184px;
 }
 
-.contacts {
-	display: block;
+.right {
 	float: right;
-	margin: 15px 38px 0 0;
+}
+
+.contacts {
+	margin: 15px 0 0 220px;
 	line-height: 20px;
 }
 
@@ -36,9 +38,8 @@ header {
 }
 
 .menu {
-	float: right;
 	clear: both;
-	margin: 20px 35px 0 0;
+	margin: 20px 25px 0 0;
 }
 
 .menu ul li {
@@ -58,8 +59,8 @@ header {
 }
 
 .logo {
-	float:left;
-	margin: -75px 0 0 30px;
+	float: left;
+	margin: 17px 0 0 30px;
 }
 
 .photo {
