--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 .mo {
-	color: rgb(46, 122, 196);
+	color: white;
 	text-decoration: none;
 	font-size: 14px;
 	line-height: 40px;
@@ -55,12 +55,15 @@ body {
 	text-decoration: none;
 	font-size: 14px;
 	font-weight: bold;
-	line-height: 39px;
+	line-height: 40px;
 	margin: 0 20px;
-	border-bottom: 1px solid rgb(74,156,214);
 	border-left: 1px solid rgb(74,156,214);
 	border-right: 1px solid rgb(74,156,214);
 }
+
+.oe a {
+	color: white;
+} 
 
 .menu li a {
 	display: block;
@@ -73,13 +76,14 @@ body {
 .menu li:hover a {
 	background: rgb(78, 171, 218);
 	color: white;
+	font-weight: bold;
 }
 
 .panel {
 	background-image: url(../img/panel.png);
 	background-repeat: no-repeat;
 	width: 560px;
-	height: 614px;
+	height: 610px;
 	margin: 257px auto;
 }
 
@@ -90,13 +94,52 @@ body {
 	padding: 20px 0;
 }
 
-.img {
+.button {
+	background: linear-gradient(to bottom, #3c579e 0%,#2b4578 100%);
+	margin: 35px auto 0 auto;
+	border-radius: 3px;
+	border-top: 1px solid rgb(126,141,184);
+	width: 280px;
+	height: 34px;
+}
+
+.button a, .button p  {
+	display: block;
+	color: white;
+	line-height: 35px;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.lb {
+	text-align: center;
+	float: left;
+	display: block;
+	width: 35px;
+	height: 34px;
+	border-right: 1px solid rgb(33,60,113);
+}
+
+.rb {
+	text-align: center;
+	float: right;
+	display: block;
+	width: 243px;
+	height: 34px;
+	border-left: 1px solid rgb(76,100,162);
+}
+
+.strelka {
+	padding: 0 15px;
+}
+
+.poloska2 {
 	display: block;
 	margin: 0 auto;
 	padding-top: 35px;
 }
 
-.or {
+.ou {
 	color: rgb(143,143,143);
 	font-size: 14px;
 	text-align: center;
