--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -12,9 +12,6 @@
 }
 
 body {
-	background-image: url(../img/bg.jpg);
-	background-repeat: no-repeat;
-	background-size: 100%;
 	font-family: helvetica_neue;
 }
 
@@ -24,26 +21,37 @@ body {
 	display: block;
 }
 
-.menu1 ul li{
+header {
+	height: 33px;
+}
+
+.top_menu {
+	background-image: url(../img/top_menu.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-height: 35px;
+}
+
+.top_menu ul li{
 	float: right;
-	line-height: 40px;
+	height: 33px;
 }
 
 .flag {
-	margin: 9px 15px;
+	margin: 5px 15px;
 }
 
 .palka {
-	padding: 5px 10px;
+	padding: 2px 10px;
 }
 
 .mo {
+	display: block;
 	color: white;
 	text-decoration: none;
 	font-size: 14px;
-	line-height: 40px;
 	font-weight: bold;
-	margin: 0 5px;
+	padding: 8px 0;
 }
 
 .oe {
@@ -55,10 +63,10 @@ body {
 	text-decoration: none;
 	font-size: 14px;
 	font-weight: bold;
-	line-height: 40px;
 	margin: 0 20px;
 	border-left: 1px solid rgb(74,156,214);
 	border-right: 1px solid rgb(74,156,214);
+	line-height: 33px;
 }
 
 .oe a {
@@ -70,7 +78,8 @@ body {
 	color: rgb(96, 181, 237);
 	font-size: 14px;
 	text-decoration: none;
-	padding: 0 20px;
+	padding: 8px 20px;
+	line-height: 17px;
 }
 
 .menu li:hover a {
@@ -80,11 +89,27 @@ body {
 }
 
 .panel {
-	background-image: url(../img/panel.png);
+	background-image: url(../img/bg.png);
 	background-repeat: no-repeat;
+	background-size: 100%;
+	height: 1140px;
+}
+
+.b_panel {
+	position: absolute;
 	width: 560px;
-	height: 610px;
-	margin: 257px auto;
+	margin: 20% 30%;
+}
+
+.b_panel1 {
+	background-color: rgba(0,0,0,0.63);
+}
+
+.b_panel2 {
+	margin: 3px auto;
+	background-color: rgba(0,0,0,0.63);
+	position: absolute;
+	width: 560px;
 }
 
 .title {
@@ -95,8 +120,9 @@ body {
 }
 
 .button {
+	position: relative;
 	background: linear-gradient(to bottom, #3c579e 0%,#2b4578 100%);
-	margin: 35px auto 0 auto;
+	margin: 30px auto 0 auto;
 	border-radius: 3px;
 	border-top: 1px solid rgb(126,141,184);
 	width: 280px;
