--- a/GoIT/markup/home/lesson5/css/style.css
+++ b/GoIT/markup/home/lesson5/css/style.css
@@ -12,7 +12,11 @@
 }
 
 body {
+	background-image: url(../img/bg.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
 	font-family: helvetica_neue;
+	height: 1140px;
 }
 
 .clearfix:after {
@@ -21,28 +25,23 @@ body {
 	display: block;
 }
 
-header {
-	height: 33px;
-}
-
 .top_menu {
-	background-image: url(../img/top_menu.jpg);
-	background-repeat: no-repeat;
-	background-size: 100%;
-	background-height: 35px;
+	margin: 0 auto;
+	width: 1000px;
+	height: 40px;
 }
 
-.top_menu ul li{
+.top_menu p{
 	float: right;
-	height: 33px;
+
 }
 
 .flag {
-	margin: 5px 15px;
+	margin: 8px 15px;
 }
 
 .palka {
-	padding: 2px 10px;
+	padding: 5px 10px;
 }
 
 .mo {
@@ -51,7 +50,15 @@ header {
 	text-decoration: none;
 	font-size: 14px;
 	font-weight: bold;
-	padding: 8px 0;
+	padding: 13px 0 13px 44px;
+}
+
+.mo:before {
+	content: url(../img/flag.png);
+	position: absolute;
+    margin: -5px -45px;
+    border-left: 1px solid rgb(86, 162, 220);
+    padding: 0 15px;
 }
 
 .oe {
@@ -66,39 +73,31 @@ header {
 	margin: 0 20px;
 	border-left: 1px solid rgb(74,156,214);
 	border-right: 1px solid rgb(74,156,214);
-	line-height: 33px;
+	line-height: 40px;
 }
 
 .oe a {
 	color: white;
-} 
+}
 
 .menu li a {
 	display: block;
+	float: right;
 	color: rgb(96, 181, 237);
 	font-size: 14px;
 	text-decoration: none;
 	padding: 8px 20px;
-	line-height: 17px;
+	line-height: 24px;
 }
 
 .menu li:hover a {
 	background: rgb(78, 171, 218);
 	color: white;
-	font-weight: bold;
-}
-
-.panel {
-	background-image: url(../img/bg.png);
-	background-repeat: no-repeat;
-	background-size: 100%;
-	height: 1140px;
 }
 
 .b_panel {
-	position: absolute;
 	width: 560px;
-	margin: 20% 30%;
+	margin: 200px auto;
 }
 
 .b_panel1 {
@@ -120,60 +119,67 @@ header {
 }
 
 .button {
-	position: relative;
 	background: linear-gradient(to bottom, #3c579e 0%,#2b4578 100%);
 	margin: 30px auto 0 auto;
 	border-radius: 3px;
 	border-top: 1px solid rgb(126,141,184);
 	width: 280px;
 	height: 34px;
+	position: relative;
 }
 
-.button a, .button p  {
+.button a {
 	display: block;
 	color: white;
 	line-height: 35px;
 	font-weight: bold;
 	text-decoration: none;
-}
-
-.lb {
 	text-align: center;
-	float: left;
-	display: block;
-	width: 35px;
-	height: 34px;
-	border-right: 1px solid rgb(33,60,113);
+	margin-left: 55px;
 }
 
-.rb {
-	text-align: center;
-	float: right;
-	display: block;
-	width: 243px;
-	height: 34px;
-	border-left: 1px solid rgb(76,100,162);
-}
 
-.strelka {
+.log:after {
+	content: url(../img/strelka.png);
 	padding: 0 15px;
 }
 
-.poloska2 {
-	display: block;
-	margin: 0 auto;
-	padding-top: 35px;
+.log:before {
+	content: url(../img/fb.png);
+	position: absolute;
+	right: 241px;
 }
 
 .ou {
 	color: rgb(143,143,143);
 	font-size: 14px;
 	text-align: center;
-	margin-top: -10px;
+	margin-top: 20px;
+	position: relative;
+}
+
+.ou:before {
+	content: '';
+ 	width: 123px;
+ 	border-top: 1px solid #666;
+ 	border-bottom: 1px solid #000;
+	position: absolute;
+	left: 141px;
+	top: 7px;
+}
+
+.ou:after {
+	content: '';
+ 	width: 123px;
+ 	border-top: 1px solid #666;
+ 	border-bottom: 1px solid #000;
+	position: absolute;
+	right: 141px;
+	top: 7px;
 }
 
 form {
-	padding-top: 30px;
+	padding-top: 23px;
 }
 
 input[type="text"] {
