--- a/GoIT/markup/home/lesson6/css/style.css
+++ b/GoIT/markup/home/lesson6/css/style.css
@@ -37,16 +37,18 @@ header {
 	box-shadow: 5px 4px 20px -3px rgba(150,150,150,1);
 	border-radius: 3px;
 	height: 25px;
+	width: 499px;
 	margin: -5px 0 0 10px;
 }
 
-.person {
-	position: absolute;
-	margin: 4px 0px 0 7px;
+form {
+	float: left;
 }
 
-form {
-	margin-left: 5px;
+form:before {
+	content: url(../img/person.png);
+	position: absolute;
+	margin: 4px 0px 0 7px;
 }
 
 input[type="text"], input[type="password"] {
@@ -60,25 +62,29 @@ input[type="text"] {
 	margin-left: 25px;
 }
 
-.text {
-	color: white;
-	font-size: 11px;
-	padding: 0 5px 0 6px;
-	text-decoration: none;
-}
-
 input[placeholder] {
 	padding-left: 5px;
 }
 
-.poloska {
-	margin: 0 -11px 0 0;
+.poloska:after {
+	content: '|';
+	position: absolute;
+	margin: 0 0 0 8px;
 }
 
-.for_pas {
+.text {
+	color: white;
+	font-size: 12px;
+	padding: 0 6px 0 8px;
+	text-decoration: none;
+	line-height: 24px;
+}
+
+.text:hover{
 	color: rgb(191, 191, 191);
 	font-size: 12px;
-	padding: 0 9px 0 16px
+	text-decoration: underline;
+
 }
 
 .buttons {
@@ -107,9 +113,8 @@ input[placeholder] {
 
 .main_menu {
 	background: linear-gradient(to bottom, #2d3236 0%,#060707 100%); 
-	
 	width: 910px;
-	margin: 7px auto;
+	margin: 7px auto 19px auto;
 	box-shadow: 5px 4px 20px -3px rgba(150,150,150,1);
 	border-radius: 3px;
 }
@@ -145,14 +150,19 @@ input[placeholder] {
 	margin-left: 125px;
 }
 
-.cent_menu li a{
+.cent_menu li {
 	float: left;
+	padding: 5px 7px;
+}
+
+.cent_menu li a {
+	display: block;
 	text-transform: uppercase;
 	color: rgb(177, 188, 192);
 	font-size: 14px;
 	text-decoration: none;
-	padding: 0 15px;
-	line-height: 33px;
+	line-height: 26px;
+    padding: 0 10px;
 }
 
 .cent_menu li a:hover {
@@ -172,6 +182,7 @@ section {
 }
 
 .center_col {
+	padding: 10px 0 25px 0;
 	width: 527px;
 	height: 622px;
 	float: left;
@@ -301,33 +312,18 @@ input[type="button"] {
 	margin: -2px 0 0 15px;
 }
 
-.col1 {
-	width: 32%;
-	float: left;
-	margin-left: 7px;
-}
-
-.col2 {
-	width: 32%;
-	float: left;
-	margin-left: -2px;
-}
-
-.col3 {
-	width: 32%;
-	float: right;
-	margin-right: 16px;
-}
-
 figure {
 	margin: 10px 0px 25px 0px;
 	text-align: center;
+	width: 33.3%;
+	float: left;
 }
 
-.firm_t {
+.firm_t a {
 	color: rgb(32, 105, 136);
 	font-size: 15px;
 	font-weight: bold;
+	text-decoration: none;
 
 }
 
@@ -339,6 +335,7 @@ figure {
 	color: rgb(17, 65, 101);
 	font-size: 16px;
 	font-weight: bold;
+	font-style: italic;
 	margin-top: 2px;
 }
 
@@ -363,11 +360,13 @@ footer {
 footer ul li {
 	display: inline-block;
 	line-height: 30px;
+	padding: 4px 11px 0 3px;
 }
 
 footer ul > li:after {
 	content: '|';
 	color: rgb(190, 198, 201);
+	padding: 0 0 0 16px;
 }
 
 footer ul > li:last-child:after {
@@ -378,7 +377,6 @@ footer ul li a {
 	font-size: 13px;
 	color: rgb(190, 198, 201);
 	text-decoration: none;
-	padding: 0 9px 0 10px;
 }
 
 footer ul li a:hover {
