--- a/GoIT/markup/home/JavaScript/lesson 11-12/1.2 Шаблонизатор/css/style.css
+++ b/GoIT/markup/home/JavaScript/lesson 11-12/1.2 Шаблонизатор/css/style.css
@@ -1,3 +1,8 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	background-color: rgb(238,238,238);
 }
@@ -5,35 +10,41 @@ body {
 .page {
 	width: 500px;
 	background-color: white;
-	margin: auto; 
+	margin: 10px auto; 
 	font-size: 16px;
 	border: 1px solid rgb(213,213,213);
 }
 
-.block0 {
+.page h2 {
 	text-align: center;
-	border-bottom: 2px solid rgb(213,213,213); 
-	margin: 25px;
-	padding: 0 15px;
-}
-
-.left {
-	text-align: left;
 }
 
 .image{ 
 	margin:auto; 
 	display: block; 
 	height: 150px;
-} 
+}
+
+.left {
+	text-align: left;
+}
 
 .block1 {
-	border-bottom: 2px solid rgb(213,213,213); 
+	border-bottom: 1px solid rgb(213,213,213); 
 	margin: 25px;
 	padding: 0 15px;
+}
+
+.block1 p {
+	margin-bottom: 5px;
+}
+
+.block1 li {
+	margin: 10px 0 10px 20px;
 }
 
 .block2 {
 	margin: 25px;
 	padding: 0 15px;
 }
+
